--- a/results.html
+++ b/results.html
@@ -45,7 +45,7 @@
         <img src="" alt="강의" />
       </a>
     </div>
-    <div class="btn" class="btn btn-green btn-small share-or-copy">
+    <div class="btn btn-green btn-small share-or-copy">
       결과 공유하기
     </div>
     <a href="/" class="btn btn-gray btn-small"> 다시 테스트하기 </a>
