--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script defer src="./js/share.js"></script>
   </head>
   <body>
-    <h2 class="page-subtitle">김혜지</h2>
+    <h2 class="page-subtitle">MBTI Test</h2>
     <h1 class="page-title">
       내 안에 숨어있는<br />
       직업캐 찾기!
